--- a/src/configure.ac
+++ b/src/configure.ac
@@ -1,12 +1,12 @@
-AC_INIT([btparser], [0.13], [kklic@redhat.com])
+AC_INIT([btparser], [0.16], [kklic@redhat.com])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AM_MAINTAINER_MODE
 
 AC_CONFIG_MACRO_DIR([m4])
+AC_PROG_CC
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
-AC_PROG_CC
 
 # Initialize the test suite.
 AC_CONFIG_TESTDIR(tests)
@@ -15,11 +15,26 @@ AM_MISSING_PROG([AUTOM4TE], [autom4te])
 # Needed by tests/atlocal.in.
 AC_SUBST([O0CFLAGS], [`echo $CFLAGS   | sed 's/-O[[0-9]] *//'`])
 
+AM_PATH_PYTHON
+if test -z "$PYTHON"
+then
+    echo "*** Essential program python not found" 1>&2
+    exit 1
+fi
+
+# Just PKG_CHECK_MODULES([PYTHON], [python]) works only with python2.7+
+# Below, if python is not found, we set up for python2.6 w/o checking:
+PKG_CHECK_MODULES([PYTHON], [python],,[
+    PYTHON_LIBS='-L/usr/lib64 -lpython2.6'
+    PYTHON_CFLAGS='-I/usr/include/python2.6'
+])
+
 AC_CONFIG_FILES([
 	btparser.spec
 	btparser.pc
 	Makefile
 	lib/Makefile
+	python/Makefile
 ])
 
 AC_OUTPUT
