--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -33,8 +33,11 @@ TESTSUITE_AT =	\
   strbuf.at	\
   frame.at 	\
   thread.at 	\
-  backtrace.at 	\
-  normalize.at
+  backtrace.at  \
+  normalize.at  \
+  metrics.at \
+  cluster.at \
+  sharedlib.at
 
 EXTRA_DIST += $(TESTSUITE_AT)
 TESTSUITE = $(srcdir)/testsuite
@@ -48,7 +51,7 @@ atconfig: $(top_builddir)/config.status
 	(cd ${top_builddir} && ./config.status ${subdir}/atconfig)
 
 check-local: $(check_DATA)
-	$(SHELL) '$(TESTSUITE)' $(TESTSUITEFLAGS) ||:
+	$(SHELL) '$(TESTSUITE)' $(TESTSUITEFLAGS)
 
 installcheck-local: $(check_DATA)
 	$(SHELL) '$(TESTSUITE)' AUTOTEST_PATH='$(bindir)' $(TESTSUITEFLAGS) ||:
