--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = lib tests
+SUBDIRS = lib python tests
 
 bin_PROGRAMS = btparser
-btparser_CFLAGS = -Wall -Werror
+btparser_CFLAGS = -Wall
 btparser_SOURCES = btparser.c
 btparser_LDADD = lib/libbtparser.la
 
