els-ASAP auto commit file/tag btparser-0.17-1.el6.src.rpm

--- a/src/btparser.spec.in
+++ b/src/btparser.spec.in
@@ -8,7 +8,7 @@ Group: Development/Libraries
 License: GPLv2+
 URL: http://fedorahosted.org/btparser
 Source0: https://fedorahosted.org/released/btparser/btparser-%{version}.tar.xz
-BuildRequires: python-devel
+BuildRequires: python2-devel
 
 %description
 Btparser is a backtrace parser and analyzer, which works with
